# open-brain-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.yml  phase1-tests-reference.js
src/: config.rs  embed.rs  main.rs  recall.rs  store.rs
src/mcp/: mod.rs  tools.rs  transport.rs
